--- a/notice_board/templates/board.html
+++ b/notice_board/templates/board.html
@@ -1,17 +1,22 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h2> 게시판 글쓰기</h2>
+<div class="container">
+    <h2>게시판 글쓰기</h2>
 
-<form method="post" action="/board">
-    <label for="title">title</label>
-    <input type="text"  name="title" required>
-    <br>
-    <label for="body">body</label>
-    <textarea  cols="50" rows="20" name="body" ></textarea>
-    <input type="submit" name="submit">
-    <br>
-</form>
+    <form method="post" action="/board">
+        <div class="mb-3">
+            <label for="title" class="form-label">Title</label>
+            <input type="text" class="form-control" name="title" required>
+        </div>
+        <div class="mb-3">
+            <label for="body" class="form-label">Body</label>
+            <textarea class="form-control" cols="50" rows="20" name="body"></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary" name="submit">Submit</button>
+    </form>
+</div>
+{% endblock %}
 
 {% with messages = get_flashed_messages(with_categories=true) %}
     {% if messages %}
@@ -27,4 +32,3 @@
 {% endwith %}
 
 
-{% endblock %}
