--- a/notice_board/templates/board_detail.html
+++ b/notice_board/templates/board_detail.html
@@ -1,9 +1,18 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h2>게시물 상세보기</h2>
-<p>제목: {{ post[1] }}</p>
-<p><textarea cols="50" rows="20">{{ post[2] }}</textarea></p>
-<p>작성자:{{post[4]}} </p>
-<p>작성시간 : {{post[3]}}</p>
+<div class="container">
+    <h2>게시물 상세보기</h2>
+    <p>제목: {{ post['title'] }}</p>
+    <p><textarea class="form-control" cols="50" rows="20" readonly>{{ post['body'] }}</textarea></p>
+    <p>작성자:{{post['userid']}} </p>
+    <p>작성시간 : {{post['time']}}</p>
+
+    {% if session['userid'] == post['userid'] %}
+    <form method="post" action="{{ url_for('board_detail', id=post['id']) }}" class="mt-3">
+        <button type="submit" class="btn btn-danger" name= "delete">Delete</button>
+        <!-- <button type="submit" name = "Edit">Edit</button> -->
+    </form>
+</div>
+{% endif %}
 {% endblock %}
