--- a/notice_board/templates/index.html
+++ b/notice_board/templates/index.html
@@ -3,10 +3,10 @@
 {% block content %}
 
     <div class="container">
-        <h2>게시판에 놀러오신걸 환영합니다.</h2>
+        <h2>루키즈 게시판에 놀러오신걸 환영합니다.</h2>
         <ul class="list-group">
-            <li class="list-group-item"><a href="/board" class="text-decoration-none">Board</a></li>
-            <li class="list-group-item"><a href="/board_list" class="text-decoration-none">Board List</a></li>
+            <li class="list-group-item"><a href="{{url_for('board.board')}}" class="text-decoration-none">게시글 쓰기</a></li>
+            <li class="list-group-item"><a href="{{url_for('board.board_list')}}" class="text-decoration-none">게시판 목록</a></li>
         </ul>
     </div>
 
