--- a/notice_board/templates/user/signup.html
+++ b/notice_board/templates/user/signup.html
@@ -2,12 +2,12 @@
 
 {% block content %}
 <div class="container">
-    <h2>Sign Up</h2>
+    <h2>회원가입</h2>
     {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
             
                 {% for category, message in messages %}
-                    {% if category == 'existed_id' or category == 'password_check'%}
+                    {% if category == 'existed_id' or category == 'password_check' or category =='password_pattern' %}
                     <script>
                         alert("{{ message }}");
                     </script>
@@ -15,7 +15,7 @@
                 {% endfor %}
         {% endif %}
     {% endwith %}
-    <form method="post" action="/signup" class="mb-3">
+    <form method="post" action="{{url_for('user.signup')}}" class="mb-3">
         <div class="form-group">
             <label for="name">username:</label>
             <input type="text" class="form-control" name="username" required>
@@ -26,15 +26,12 @@
         </div>
         <div class="form-group">
             <label for="password">Password:</label>
-            <input type="password" class="form-control" name="password" required>
+            <input type="password" class="form-control" name="password" placeholder="숫자, 특수기호를 포함한 8자리 이상을 입력해주세요." required>
         </div>
         <div class="form-group">
             <label for="password_check">Password Check:</label>
-            <input type="password" class="form-control" name="password_check" required>
+            <input type="password" class="form-control" name="password_check" placeholder="숫자, 특수기호를 포함한 8자리 이상을 입력해주세요." required>
         </div>
         <button type="submit" class="btn btn-primary">Sign Up</button>    </form>
 </div>
 {% endblock %}
-
-<!-- 
-#login 바꿔야됨 -->
